--- a/public/assets/css/NavBar.css
+++ b/public/assets/css/NavBar.css
@@ -9,6 +9,7 @@ header{
     display:  flex;
     z-index: 1000;
     width: 100%;
+    background-color: white;
     align-items: center;
     padding: 10px 20px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1); 
@@ -35,4 +36,36 @@ header nav a{
 }
 header nav a:hover{
     color: #f1c40f;
+}
+
+/*======RESPONSIVIDADE======*/
+@MEDIA(max-width: 768px){
+    header{
+        flex-wrap: wrap;
+        padding: 10px;
+    }
+    header nav{
+        width: 100%;
+        flex-direction: column;
+        align-items: flex-start;
+        margin-top: 10px;
+        gap: 10px;
+        border-top: 1px solid #ddd;
+    }
+    header nav a{
+        margin-right: 0;
+        margin-bottom: 10px;
+    }
+      header nav.active {
+    display: flex;
+  }
+    header .menu-toggle {
+    display: block;
+    font-size: 2rem;
+    cursor: pointer;
+    margin-left: auto;
+    color: rgb(146, 15, 15);
+  }
+  
+
 }
