--- a/public/assets/css/Home.css
+++ b/public/assets/css/Home.css
@@ -1,5 +1,39 @@
-*{
+body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    background: rgb(245, 210, 165);
+    color: rgb(71, 17, 17);
+    text-align: center;
+    margin:15% ;
+}
+
+iframe#video{
+    width: 100%;
+    height: 100vh;
+    border: none;
+    border-radius: 20%;
+    align-self: center;
+}
+
+iframe#mapa{
+    width: 100%;
+    height: 100vh;
+    border: none;
+    border-radius: 20%;
+    align-self: center;
+}
+input#SaoJudas{
+    width: 100%;
+    height: 100vh;
+    border: none;
+    border-radius: 20%;
+    background-color: black;
+    color: transparent;
+    align-self: center;
+    border-width: 10%;
+    border-color: rgb(245, 210, 165);
+    border-top-left-radius:20% ;
+    border-top-right-radius:20% ;
 }
