--- a/public/assets/css/Home.css
+++ b/public/assets/css/Home.css
@@ -1,12 +1,16 @@
+@import url('https://fonts.googleapis.com/css2?family=Hina+Mincho&display=swap');
 body{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
     background: rgb(245, 210, 165);
-    color: rgb(71, 17, 17);
-    text-align: center;
-    margin:15% ;
+    
+}
+.Pages{
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    gap: 20px;
 }
 
 iframe#video{
@@ -24,16 +28,30 @@ iframe#mapa{
     border-radius: 20%;
     align-self: center;
 }
-input#SaoJudas{
+#BoasVindas{
+    display: flex;
     width: 100%;
     height: 100vh;
-    border: none;
-    border-radius: 20%;
-    background-color: black;
-    color: transparent;
-    align-self: center;
-    border-width: 10%;
-    border-color: rgb(245, 210, 165);
-    border-top-left-radius:20% ;
-    border-top-right-radius:20% ;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    position: relative; 
+    overflow: hidden;
+    
+}
+#BoasVindas h1{
+    font-size: 3em;
+    z-index: 1;
+    color: #FFE1A8;
+    text-align: center;
+    font-family: 'Hina Mincho', serif;
+}
+#SaoJudas{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: absolute;
+    z-index: -1;
+    border-radius: 0%;
+    filter: brightness(45%);  
 }
