--- a/public/assets/css/Home.css
+++ b/public/assets/css/Home.css
@@ -1,33 +1,78 @@
 @import url('https://fonts.googleapis.com/css2?family=Hina+Mincho&display=swap');
-body{
+main#home{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     background: rgb(245, 210, 165);
+    color: rgb(56, 11, 11);
     
 }
-.Pages{
-    display: flex;
+
+section#HomePG2{
+    display: relative;
     width: 100%;
-    height: 100vh;
-    gap: 20px;
+    height: 100vh; 
+    align-items: center;
+text-align: center;
+    background-color: #FFE1A8;
+    color: rgb(56, 11, 11);
+    text-size-adjust: auto;
+    
+}
+
+
+section#HomePG3{
+    display: relative;
+    width: 100%;
+    height: 100vh; 
+    align-items: center;
+text-align: center;
+    background-color: #FFE1A8;
+    color: rgb(56, 11, 11);
+    text-size-adjust: auto;
 }
 
 iframe#video{
+    display: flex;
+    width: 80%;
+    height: 45%;
+    border: none;
+    border-radius: 5%;
+    align-self: center;
+    margin: 20%;
+    background-color:#FFE1A8;
+}
+
+section#HomePG4{
+    display: relative;
     width: 100%;
-    height: 100vh;
+    height: 100vh; 
+    align-items: center;
+text-align: center;
+    background-color: #FFE1A8;
+    color: rgb(56, 11, 11);
+    text-size-adjust: auto;
+}
+section#HomePG5{
+       display: relative;
+    width: 100%;
+    height: 100vh; 
+    align-items: center;
+text-align: center;
+    background-color: #FFE1A8;
+    color: rgb(56, 11, 11);
+    text-size-adjust: auto;
+}
+
+
+iframe#Mapa{
+    width: 40%;
+    height: 40%;
     border: none;
     border-radius: 20%;
     align-self: center;
 }
 
-iframe#mapa{
-    width: 100%;
-    height: 100vh;
-    border: none;
-    border-radius: 20%;
-    align-self: center;
-}
 #BoasVindas{
     display: flex;
     width: 100%;
@@ -50,7 +95,7 @@ iframe#mapa{
     width: 100%;
     height: 100%;
     object-fit: cover;
-    position: absolute;
+    position: fixed;
     z-index: -1;
     border-radius: 0%;
     filter: brightness(45%);  
