--- a/public/assets/css/Home.css
+++ b/public/assets/css/Home.css
@@ -46,6 +46,8 @@ text-align: center;
 iframe#video{
     display: flex;
     width: 80%;
+    margin-left: auto;
+    margin-right: auto;
     height: 45%;
     border: none;
     border-radius: 5%;
