--- a/public/assets/css/Home.css
+++ b/public/assets/css/Home.css
@@ -14,7 +14,7 @@ section#HomePG2{
     height: 100vh; 
     align-items: center;
 text-align: center;
-    background-color: #FFE1A8;
+    background-color: rgb(56, 11, 11);;
     color: rgb(56, 11, 11);
     text-size-adjust: auto;
     
@@ -25,7 +25,7 @@ linkwebsite{
     padding: 2%;
     border: none;
     border-radius: 15%;
-    background-color: #722222;
+    background-color: #003d0a;
     box-shadow: 5px 5px 15px rgba(0,0,0,0.3);
     text-align: center;
     text-decoration: none;
@@ -59,7 +59,7 @@ iframe#Mapa{
     border: none;
     border-radius: 5%;
     align-self: center;
-    margin-bottom: -28%;
+    margin-bottom: -27.5%;
 }
 
 
@@ -69,7 +69,7 @@ section#HomePG3{
     height: 100vh; 
     align-items: center;
 text-align: center;
-    background-color: #FFE1A8;
+    background-color: rgb(56, 11, 11);;
     color: rgb(56, 11, 11);
     text-size-adjust: auto;
 }
@@ -92,7 +92,7 @@ section#HomePG4{
     height: 100vh; 
     align-items: center;
 text-align: center;
-    background-color: #FFE1A8;
+    background-color: rgb(56, 11, 11);;
     color: rgb(56, 11, 11);
     text-size-adjust: auto;
 }
@@ -116,7 +116,7 @@ section#HomePG5{
     height: 100vh; 
     align-items: center;
 text-align: center;
-    background-color: #FFE1A8;
+    background-color: rgb(56, 11, 11);;
     color: rgb(56, 11, 11);
     text-size-adjust: 5rem;
 }
@@ -155,8 +155,14 @@ div.linha{
     height: 100%;
     margin-left: 10%;
     margin-right: 15%;
-    background-color: antiquewhite;
-    box-shadow: 5px 5px 15px rgba(0,0,0,0.3);
+    background-color: #FFE1A8;
+    padding-bottom: 5%;
+}
+div#linhaPG1{
+    margin-top: 5%;
+}
+div#linhaPG5{
+    margin-top: 2%;
 }
 
 button.botoes{
@@ -166,7 +172,7 @@ button.botoes{
     border: none;
     border-radius: 15%;
     background-color: #722222;
-    box-shadow: 5px 5px 15px rgba(0,0,0,0.3);
+    box-shadow: 0px 4px 0px rgba(0,0,0,0.3);
     text-align: center;
     text-decoration: none;
     color: white;
