--- a/public/assets/css/Home.css
+++ b/public/assets/css/Home.css
@@ -108,6 +108,7 @@ article{
     background-color: #722222;
     box-shadow: 5px 5px 15px rgba(0,0,0,0.3);
     text-align: center;
+    color: white;
 }
 
 section#HomePG5{
