--- a/public/assets/css/Home.css
+++ b/public/assets/css/Home.css
@@ -19,7 +19,6 @@ body {
     color: var(--cor-texto);
 }
 
-/* Seções */
 .section-padrao {
     width: 100%;
     min-height: 100vh;
@@ -28,6 +27,10 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
+}
+#BoasVindas {
+    font-size: 1.5em;
+    
 }
 
 .section-full {
@@ -137,6 +140,41 @@ body {
     font-size: 1.5rem;
     margin-bottom: 20px;
 }
+
+/* HomePG5 - estilo igual ao HomePG2 */
+#HomePG5 .linha {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    padding: 5%;
+}
+
+#HomePG5 .itens-direita {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    gap: 40px;
+    padding: 20px;
+    text-align: center;
+    align-items: center;
+}
+
+#HomePG5 .itens-direita h1 {
+    font-size: 4em;
+}
+#HomePG5 .itens-direita p {
+    font-size: 1.2rem;
+    line-height: 1.6;
+    text-align: justify;
+    margin-top: 20px;
+}
+#HomePG5 .img {
+    width: 100%;
+    height: auto;
+    border-radius: 8px;
+    box-shadow: rgba(110, 4, 4, 0.35) 0px 5px 15px;
+}
+
 
 /* Imagens */
 .img,
