--- a/public/assets/css/Home.css
+++ b/public/assets/css/Home.css
@@ -194,3 +194,8 @@ h1{
     margin-bottom: 2%;
     font-family: 'Hina Mincho', serif;
 }
+h2{
+    font-size: 2.0em;
+    margin-bottom: 2%;
+    font-family: 'Hina Mincho', serif;
+}
