--- a/public/assets/css/PagesAdmin.css
+++ b/public/assets/css/PagesAdmin.css
@@ -128,6 +128,8 @@ body {
   margin: 0.5rem 0;
   height: 60px; /* altura fixa para limitar o tamanho */
   overflow: hidden; /* esconde o excesso de texto */
+  word-break: break-word;
+  white-space: large; /* permite que o texto quebre em várias linhas */
   
 }
 
