--- a/public/assets/css/Home.css
+++ b/public/assets/css/Home.css
@@ -305,6 +305,7 @@ body {
     border-radius: 12px;
 }
 
+
 .img,
 iframe {
     width: 60%;
@@ -359,6 +360,77 @@ iframe {
 
 .card:hover {
     transform: translateY(-5px);
+}
+/* --------- Sacramentos --------- */
+#Sacramentos {
+   display: flex;
+  flex-direction: column;
+  align-items: stretch;         /* children ocupam largura disponível */
+  justify-content: flex-start;  /* evita centralização vertical */
+  width: 100%;
+  
+  min-height: auto;   
+}
+#Sacramentos .linha {
+    display: flex;
+    flex-direction: column; /* Garante que título, subtítulo e cards fiquem em coluna */
+    justify-content: flex-start; /* Evita centralização vertical */
+}
+#Sacramentos h1 {
+    font-size: 3em;
+    margin-bottom: 10px;
+    color: var(--cor-primaria);
+}
+
+#Sacramentos p {
+    font-size: 1.3rem;
+    margin-bottom: 30px;
+    color: #333;
+}
+
+#Sacramentos .cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1.5rem;
+}
+
+#Sacramentos .card {
+    flex: 1 1 250px;
+    max-width: 300px;
+    background: var(--cor-primaria);
+    color: #ffe1a8;
+    padding: 1.5rem;
+    border-radius: 10px;
+     word-break: break-word;
+    white-space: large;
+    text-align: left;
+    box-shadow: 5px 5px 15px rgba(0,0,0,0.3);
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+
+#Sacramentos .card:hover {
+    transform: translateY(-5px);
+    box-shadow: 8px 8px 20px rgba(0,0,0,0.4);
+}
+
+#Sacramentos .card h3 {
+    font-size: 1.5rem;
+    margin-bottom: 0.5rem;
+    color: #ffe1a8;
+}
+
+#Sacramentos .card .valor {
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+    font-size: 1.1rem;
+    color: #ffe1a8;
+}
+
+#Sacramentos .card .descricao {
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #f8f8f8;
 }
 
 /* Botões */
