--- a/public/assets/css/PagesAdmin.css
+++ b/public/assets/css/PagesAdmin.css
@@ -84,8 +84,8 @@ body {
 
 .card {
   position: relative;
-  flex: 1 1 250px;
-  max-width: 280px;
+  width: 20%;
+  height: auto;
   background-color: rgb(146, 15, 15);
   color: #FFE1A8;
   padding: 1rem;
@@ -99,7 +99,8 @@ body {
   transform: scale(1.03);
 }
 
-.card h3 {
+#Sacramentos .card h3 {
+  font-size: 3.5rem;
   margin: 0 0 0.5rem;
 }
 .card p {
@@ -126,7 +127,6 @@ body {
 .descricao {
   font-size: 0.9rem;
   margin: 0.5rem 0;
-  height: 60px; /* altura fixa para limitar o tamanho */
   overflow: hidden; /* esconde o excesso de texto */
   word-break: break-word;
   white-space: large; /* permite que o texto quebre em várias linhas */
