--- a/public/assets/css/Home.css
+++ b/public/assets/css/Home.css
@@ -213,7 +213,7 @@ body {
     width: 100%;
     height: auto;
     border-radius: 8px;
-    box-shadow: rgba(110, 4, 4, 0.35) 0px 5px 15px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .liturgia-container {
@@ -223,7 +223,7 @@ body {
     background: var(--cor-primaria);
     color: var(--cor-fundo);
     border-radius: 8px;
-    box-shadow: rgba(110, 4, 4, 0.35) 0px 5px 15px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     text-align: left;
 }
 #HomePG6 .linha h1 {
@@ -294,7 +294,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    box-shadow: rgba(110, 4, 4, 0.35) 0px 5px 15px;
+   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 
     
 }
@@ -313,7 +313,7 @@ iframe {
     margin: 1.5rem auto;
     display: block;
     border-radius: 8px;
-    box-shadow: rgba(110, 4, 4, 0.35) 0px 5px 15px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 .icon {
@@ -405,13 +405,13 @@ iframe {
      word-break: break-word;
     white-space: large;
     text-align: left;
-    box-shadow: 5px 5px 15px rgba(0,0,0,0.3);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 #Sacramentos .card:hover {
     transform: translateY(-5px);
-    box-shadow: 8px 8px 20px rgba(0,0,0,0.4);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
 }
 
 #Sacramentos .card h3 {
