--- a/public/assets/css/NavBar.css
+++ b/public/assets/css/NavBar.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 header {
@@ -13,7 +14,8 @@ header {
     background-color: white;
     align-items: center;
     padding: 5px 20px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1); 
+    box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
+  
 }
 
 img {
@@ -33,6 +35,7 @@ header nav ul {
     list-style: none;
     display: flex;
     gap: 20px;
+    
 }
 
 header nav ul li {
@@ -60,7 +63,7 @@ header nav ul li a:hover {
     background: white;
     border: 1px solid #ddd;
     min-width: 150px;
-    box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+    
     z-index: 999;
     flex-direction: column;
 }
