--- a/public/assets/css/Home.css
+++ b/public/assets/css/Home.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Hina+Mincho&display=swap');
 
 :root {
-    --cor-fundo: lightgrey;
+    --cor-fundo: #F8F0E2;
     --cor-primaria: rgb(146, 15, 15); /* Alterado aqui */
     --cor-texto:  rgb(146, 15, 15);
 }
@@ -125,7 +125,7 @@ body {
     width: 100%;
     min-height: 100dvh;
     padding: 5%;
-    background: lightgrey;
+    background: var(--cor-fundo);
 }
 
 .links-sociais a {
@@ -212,8 +212,7 @@ body {
     width: 100%;
     height: auto;
     border-radius: 8px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-}
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px}
 
 .liturgia-container {
     width: 80%;
@@ -256,7 +255,7 @@ body {
     display: block;              
     padding: 5%;
     text-align: left;            
-    background: lightgrey;         
+    background: var(--cor-fundo);         
 }
 
 .qrcode-section .qrcode-linha {
@@ -293,8 +292,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-
+   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px
     
 }
 
@@ -312,7 +310,7 @@ iframe {
     margin: 1.5rem auto;
     display: block;
     border-radius: 8px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px;
 }
 
 .icon {
@@ -345,8 +343,7 @@ iframe {
     border-radius: 8px;
     text-align: start;
     transition: transform 0.2s;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-}
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px}
 
 .card h2 {
     font-size: 1.8rem;
