--- a/public/assets/css/Home.css
+++ b/public/assets/css/Home.css
@@ -212,7 +212,10 @@ body {
     width: 100%;
     height: auto;
     border-radius: 8px;
-    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px}
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px;
+    filter: brightness(85%);
+}
+
 
 .liturgia-container {
     width: 80%;
@@ -304,6 +307,7 @@ body {
 
 
 .img,
+
 iframe {
     width: 60%;
     height: auto;
