--- a/public/assets/css/Admin.css
+++ b/public/assets/css/Admin.css
@@ -13,8 +13,7 @@ body {
     /* justify-content: center; */ /* Removido para alinhar ao topo */
     align-items: center;
     padding-top: 2rem; /* Espaço do topo */
-    background: #fff8ee;
-}
+            background: #fff8ee}
 
 header {
     display: flex;
@@ -145,7 +144,8 @@ button[type="submit"]:hover {
     flex-direction: row;
     justify-content: flex-start; 
     padding: 0.5rem 0;
-    gap: 1rem;                
+    gap: 1rem; 
+    box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;             
 }
 
 .header img {
@@ -169,6 +169,7 @@ button[type="submit"]:hover {
     display: flex;
     align-items: center;
     gap: 1rem;
+    box-shadow: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
 }
 .header nav a {
     color: rgb(146, 15, 15);
@@ -195,7 +196,7 @@ button[type="submit"]:hover {
     background-color: rgb(146, 15, 15);
     color: #FFE1A8;
     border-radius: 12px;
-    box-shadow: 0 4px 24px rgba(44, 62, 80, 0.08);
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
     padding: 1rem;
     text-align: center;
 }
