--- a/public/assets/css/PagesAdmin.css
+++ b/public/assets/css/PagesAdmin.css
@@ -100,7 +100,7 @@ body {
 .card:hover {
   transform: scale(0.91);
   box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
-  color: crimson;
+  color: rgb(146, 15, 15);
   cursor: pointer;
   background-color: antiquewhite;
   transition-duration: 0.3s;
@@ -131,6 +131,7 @@ body {
   cursor: pointer;
   margin-top: 1rem;
 }
+
 .descricao {
   font-size: 0.9rem;
   margin: 0.5rem 0;
