--- a/public/assets/css/Home.css
+++ b/public/assets/css/Home.css
@@ -452,7 +452,12 @@ iframe {
 }
 
 .btn:hover {
-    background: #501717;
+  transform: scale(0.91);
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+  color: crimson;
+  cursor: pointer;
+  background-color: antiquewhite;
+  transition-duration: 0.3s;
 }
 
 /* Tipografia */
